# RemoteExo

./: Gemfile  README.md  app.js  app.rb  config.ru  output.txt  package-lock.json  package.json  temp.py
Arduino Docs/: CMakeLists.txt  DeviceConfiguration.html  Pin.js  arduinoStuff.ino  deviceConfig.js  force_sensor.ino  force_sensor_class.cpp  force_sensor_class.h  main.cpp  style.css
lib/: arduino_communicator.rb  wordguesser_game.rb
spec/: spec_helper.rb  wordguesser_game_spec.rb
views/: control.erb  index.ejs  index.erb  layout.erb  new.erb  show.erb
